--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ edition = "2018"
 [dependencies]
 color-eyre = "0.5.11"
 cpal = "0.13.4"
+crossbeam = "0.8.1"
+egui = "0.13.1"
+egui_glium = "0.13.1"
 glium = "0.30.1"
 ndarray = "0.15.3"
 rustfft = "6.0.1"
