--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,6 @@ egui = "0.13.1"
 egui_glium = "0.13.1"
 glium = "0.30.1"
 ndarray = "0.15.3"
+puffin = "0.6.0"
+puffin_http = "0.3.0"
 rustfft = "6.0.1"
